feat: Compiler target version of test classes is configurable.